大数据智能分析查询平台

--- a/iquery项目/data/数据处理脚本.ipynb
+++ b/iquery项目/data/数据处理脚本.ipynb
@@ -1892,7 +1892,7 @@
     "# openai.api_base=\"https://c.a.b/v1\"\n",
     "# client = OpenAI(api_key=openai.api_key ,base_url=openai.api_base)\n",
     "\n",
-    "client = OpenAI(api_key=\"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\")\n",
+    "client = OpenAI(api_key=\"s123\")\n",
     "client.models.list()"
    ]
   },
